Exporting module to fix PA JDK 17 runtime issue (#155)
Signed-off-by: Sagar Upadhyaya <sagar.upadhyaya.121@gmail.com>